--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Your description goes here">
     <meta name="keywords" content="one, two, three">
     <title>Joe Johnson | Portfolio</title>
-    
+
     <!-- external CSS link -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
@@ -15,11 +15,11 @@
       |
       <a href="portfolio.html">Portfolio</a>
     </nav>
-    <h1>Joe Johnson</h1>
+    <h1>Heather Myers</h1>
     <hr />
     <img src="http://lorempixel.com/400/200/sports/1/" alt="Avatar"/>
-    <h3>I Enjoy Life as a Developer</h3>
-    <p>I'm Joe Johnson, a Developer based in NYC.  I Have ten years of experience in the graphic design world, specializing in the creation of responsive websites. </p>
+    <h3>I Enjoy Life</h3>
+    <p>I'm Heather, and I work in Ad Ops in Melbourne, Australia.  I specialize in making ads fly around many websites. </p>
     <hr />
     <nav>
       <a href="http://facebook.com/">Facebook</a>
@@ -32,4 +32,3 @@
     </nav>
   </body>
 </html>
-
