--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="description" content="Your description goes here">
     <meta name="keywords" content="one, two, three">
-    <title>Joe Johnson | Portfolio</title>
+    <title>Heather Myers | Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Mali:wght@300&family=Satisfy&display=swap" rel="stylesheet">
 
     <!-- external CSS link -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
